configured Mailsending functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
 				<p>
 					{{ translationService.getTranslation('imprint', 'phone') }}: +4917687903079<br />
 					{{ translationService.getTranslation('imprint', 'email') }}:
-					<a href="mailto:dennis.jakobi76@gmail.com">dennis.jakobi76&#64;gmail.com</a><br />
+					<a href="mailto:info@dennisjakobi.net">info&#64;dennisjakobi.net</a><br />
 				</p>
 			</div>
 		</div>
@@ -51,7 +51,7 @@
 					<strong>Dennis Jakobi</strong><br>
 					Gartenstraße 90, 45699 Herten<br>
 					{{ translationService.getTranslation('imprint', 'email') }}:
-					<a href="mailto:dennis.jakobi76@gmail.com">dennis.jakobi76&#64;gmail.com</a>
+					<a href="mailto:info@dennisjakobi.net">info&#64;dennisjakobi.net</a>
 				</p>
 			</div>
 		</div>
