--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -27,7 +27,7 @@
 	</div>
 	<div class="footer-link-wrapper">
 		<img src="assets/icons/link_check_radio_button.png" alt="Point">
-		<a href="mailto:dennis.jakobi76@gmail.com">Email</a>
+		<a href="mailto:info@dennisjakobi.net">Email</a>
 	</div>
 	<div class="footer-link-wrapper">
 		<img src="assets/icons/link_check_radio_button.png" alt="Point">
