--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -24,10 +24,10 @@
 		<div class="hero-container-right flex-col-j-fe">
 
 			<div class="hero-container-email-right"><a id="hero-email-link"
-					href="mailto:dennis.jakobi76@gmail.com">dennis.jakobi76&#64;gmail.com</a>
+					href="mailto:info@dennisjakobi.net">info&#64;dennisjakobi.net</a>
 
 				<div class="hero-container-social-medialink" id="hero-mobile-email-link">
-					<a id="mobile-email-link" href="mailto:dennis.jakobi76@gmail.com">
+					<a id="mobile-email-link" href="mailto:info@dennisjakobi.net">
 						<div id="mobile-mail-icon"></div>
 					</a>
 					<div class="link-check-point" id="email-point-container"><img
