--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -26,7 +26,7 @@
 			<h2>{{ translationService.getTranslation('contact', 'emailQuestion') }}</h2>
 			<input #email="ngModel" [(ngModel)]="contactData.email" name="email" type="email" required [placeholder]="(!email.valid && email.touched && !email.disabled && !focused.email) ?
                 translationService.getTranslation('contact', 'emailRequired') :
-                translationService.getTranslation('contact', 'emailPlaceholder')" pattern="{{ emailPattern }}"
+                translationService.getTranslation('contact', 'emailPlaceholder')" [pattern]="emailPattern"
 				(focus)="focused.email = true" (blur)="focused.email = false">
 			<p class="guests-email-error" *ngIf="email.errors?.['pattern'] && email.touched && !focused.email">
 				{{ translationService.getTranslation('contact', 'emailInvalid') }}
