--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,7 +42,7 @@ body {
 }
 
 html {
-  background-color: black;
+  background-color: var(--portfolio-bg);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -99,6 +99,11 @@ a {
   span {
     width: 100%;
     text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0%;
+    font-family: "Karla";
   }
 }
 
