added infinite animation to hero-container-left-button

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -2,7 +2,8 @@
 	<app-header />
 	<main>
 		<div class="hero-container-left flex-col-j-fe">
-			<div class="hero-container-left-button"><a href="#contact-title"></a></div>
+			<div class="hero-container-left-button"><a href="#contact-title"><img src="assets/img/scroll_btn_arrow.png"
+						alt=""></a></div>
 			<div class="hero-container-seperator"></div>
 		</div>
 		<div class="hero-container-center">
