--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -53,7 +53,7 @@ main {
 }
 
 .hero-container-left-button {
-  background-image: url("../../../public/assets/img/scroll_btn_default.png");
+  background-image: url("../../../public/assets/img/scroll_btn_frame.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -61,17 +61,29 @@ main {
   height: 48px;
   margin: 0 auto;
 
-  transition: all 0.3s ease-in-out;
-
-  &:hover {
-    cursor: pointer;
-    background-image: url("../../../public/assets/img/scroll_btn_hover.png");
-  }
-
   > a {
     display: block;
     width: 100%;
     height: 100%;
+    text-align: center;
+
+    > img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      transition: all 0.3s ease-in-out;
+
+      animation: scrollBtnAnim 0.5s infinite alternate ease-in-out;
+    }
+  }
+}
+
+@keyframes scrollBtnAnim {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(8px);
   }
 }
 
