made the complete html scrollable and improved marquee appereance

--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -11,6 +11,7 @@ main {
   flex-direction: row;
   justify-content: space-evenly;
   height: calc(100vh - 98px);
+  overflow: hidden;
 }
 
 .hero-container-center {
