--- a/src/app/hero/marquee/marquee.component.scss
+++ b/src/app/hero/marquee/marquee.component.scss
@@ -1,7 +1,8 @@
 .hero-marquee {
   position: absolute;
-  bottom: 72px;
-  left: -10px;
+  bottom: 48px;
+  left: 0;
+
   height: 62px;
   width: 110%;
   background-color: rgba(255, 255, 255, 0.12);
@@ -11,7 +12,7 @@
   padding-right: 32px;
   overflow: hidden;
 
-  transform: rotate(-4deg);
+  transform: rotate(-3deg);
   z-index: 1;
   text-align: center;
   backdrop-filter: blur(5.3px);
