added alignment-wrapper to parts of the right-hero-container

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -23,18 +23,19 @@
 			</div>
 		</div>
 		<div class="hero-container-right flex-col-j-fe">
+			<div class="eight-pixel-wrapper">
+				<div class="hero-container-email-right"><a id="hero-email-link"
+						href="mailto:info@dennisjakobi.net">info&#64;dennisjakobi.net</a>
 
-			<div class="hero-container-email-right"><a id="hero-email-link"
-					href="mailto:info@dennisjakobi.net">info&#64;dennisjakobi.net</a>
-
-				<div class="hero-container-social-medialink" id="hero-mobile-email-link">
-					<a id="mobile-email-link" href="mailto:info@dennisjakobi.net">
-						<div id="mobile-mail-icon"></div>
-					</a>
-					<div class="link-check-point" id="email-point-container"><img
-							src="assets/icons/link_check_radio_button.png" alt="Point" id="email-point"></div>
+					<div class="hero-container-social-medialink" id="hero-mobile-email-link">
+						<a id="mobile-email-link" href="mailto:info@dennisjakobi.net">
+							<div id="mobile-mail-icon"></div>
+						</a>
+						<div class="link-check-point" id="email-point-container"><img
+								src="assets/icons/link_check_radio_button.png" alt="Point" id="email-point"></div>
+					</div>
 				</div>
-
+				<div class="eight-pixel-align"></div>
 			</div>
 
 			<div class="hero-link-checkpoint-wrapper">
@@ -49,7 +50,11 @@
 				<div class="link-check-point" id="linkedin-point-container"><img
 						src="assets/icons/link_check_radio_button.png" alt="Point"></div>
 			</div>
-			<div class="hero-container-seperator" id="hero-seperator-right"></div>
+			<div class="eight-pixel-wrapper">
+				<div class="hero-container-seperator" id="hero-seperator-right"></div>
+				<div class="eight-pixel-align"></div>
+			</div>
+
 		</div>
 		<app-marquee />
 	</main>
