exportet scrolling text effect vom components to main-scss

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -11,12 +11,14 @@
 			<h1>Dennis Jakobi</h1>
 			<div class="title-button-container">
 				<a href="#featured-projects">
-					<button class="primary-btn"><span>{{ translationService.getTranslation('hero', 'checkWork')
+					<button class="primary-btn btn-scroll-text"><span>{{ translationService.getTranslation('hero',
+							'checkWork')
 							}}</span></button>
 				</a>
 
 				<a href="#contact-title">
-					<button class="primary-btn"><span>{{ translationService.getTranslation('hero', 'contact')
+					<button class="primary-btn btn-scroll-text"><span>{{ translationService.getTranslation('hero',
+							'contact')
 							}}</span></button>
 				</a>
 
