--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -11,7 +11,7 @@
 			<p>{{ translationService.getTranslation('technologies', 'contactText') }}</p>
 			<div class="another-skill-button-container">
 				<button class="primary-btn">
-					<a href="#contact-title">
+					<a class="btn-scroll-text" href="#contact-title">
 						<span>{{ translationService.getTranslation('technologies', 'letsTalk') }}</span>
 					</a>
 				</button>
