--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -98,15 +98,14 @@ button {
   font-size: 18px;
   line-height: 120%;
   letter-spacing: 0%;
-}
 
-button span {
-  display: inline-block;
-  transition: all 0.8s ease-in-out;
-}
-
-button:hover span {
-  transform: translateX(-140%);
+  > a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 #another-skill {
