--- a/src/app/hero/marquee/marquee.component.scss
+++ b/src/app/hero/marquee/marquee.component.scss
@@ -1,8 +1,13 @@
-.hero-marquee {
+:host {
   position: absolute;
   bottom: 48px;
   left: 0;
+  width: 110%;
+  display: block;
+  z-index: 1;
+}
 
+.hero-marquee {
   height: 62px;
   width: 110%;
   background-color: rgba(255, 255, 255, 0.12);
