--- a/src/app/hero/hero-media-queries.scss
+++ b/src/app/hero/hero-media-queries.scss
@@ -46,12 +46,11 @@
     opacity: 0;
   }
 
-  // BLA BLA
   main {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: flex-end;
     height: auto;
     padding: 0 16px;
   }
