--- a/src/app/hero/hero-media-queries.scss
+++ b/src/app/hero/hero-media-queries.scss
@@ -51,13 +51,13 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-end;
+    // min-height: calc(100vh - 98px);
     height: auto;
     padding: 0 16px;
   }
 
   .hero-container-left,
   .hero-container-right {
-    width: 45%;
     position: static;
     transform: none;
   }
