--- a/src/app/hero/header/header.component.html
+++ b/src/app/hero/header/header.component.html
@@ -44,10 +44,12 @@
 			<div class="burger-menu-img"></div>
 		</div>
 
-		<app-mobile-menu *ngIf="mobileMenuOpen" [style.position]="'absolute'" [style.right.px]="8"
-			[style.top.px]="-50"></app-mobile-menu>
-
-
+		<app-mobile-menu
+			*ngIf="mobileMenuOpen"
+			[style.position]="'absolute'"
+			[style.right.px]="8"
+			[style.top.px]="-50"
+			(closeMenu)="mobileMenuOpen = false"
+		></app-mobile-menu>
 	</div>
-
 </div>
