--- a/src/app/technologies/technologies-media-queries.scss
+++ b/src/app/technologies/technologies-media-queries.scss
@@ -43,12 +43,24 @@
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 375px) {
   .tech-skill-icon-container {
     gap: 20px;
   }
 
   .skill-icon-and-title-container {
     margin-bottom: 8px;
+  }
+}
+
+@media (max-width: 345px) {
+  .tech-skill-icon-container {
+    gap: 16px;
+
+    .skill-icon-name {
+      font-size: 14px;
+      line-height: 100%;
+      letter-spacing: 0%;
+    }
   }
 }
