--- a/src/app/portfolio/projects/projects.component.scss
+++ b/src/app/portfolio/projects/projects.component.scss
@@ -12,13 +12,17 @@
   width: 100%;
 }
 
+.projects-container {
+  width: 100%;
+}
+
 .project-borders {
   border-top: 1px solid var(--active-font-color);
   border-bottom: 1px solid var(--active-font-color);
 }
 
 .single-project-container {
-  width: 880px;
+  width: 100%;
   height: 109px;
   display: flex;
   justify-content: space-between;
