--- a/src/app/portfolio/portfolio-media-queries.scss
+++ b/src/app/portfolio/portfolio-media-queries.scss
@@ -12,7 +12,7 @@
   }
 
   .portfolio-header {
-    padding: 40px;
+    padding: 20px;
   }
 }
 
@@ -35,6 +35,25 @@
     > p {
       width: 100%;
       font-size: 16px;
+      line-height: 120%;
+      letter-spacing: 0%;
+      text-align: justify;
+      margin-top: 20px;
+    }
+  }
+}
+
+@media (max-width: 340px) {
+  .portfolio-header {
+    > h1 {
+      font-size: 48px;
+      line-height: 100%;
+      letter-spacing: -3%;
+    }
+
+    > p {
+      width: 100%;
+      font-size: 14px;
       line-height: 120%;
       letter-spacing: 0%;
       text-align: justify;
