--- a/src/app/contact/contact-media-queries.scss
+++ b/src/app/contact/contact-media-queries.scss
@@ -11,7 +11,6 @@
   :host {
     flex-direction: column;
     align-items: center;
-    gap: 48px;
   }
 
   .contact-form-container:nth-child(2) {
@@ -27,17 +26,19 @@
   #contact-title {
     font-size: 18px;
   }
-  .contact-left-side {
-    .contact-headline {
-      font-size: 48px;
-      font-weight: 700;
-      line-height: 100%;
-      letter-spacing: -3%;
-    }
+
+  .contact-left-side .contact-headline {
+    font-size: 48px !important;
   }
 }
 
 @media (max-width: 500px) {
+  :host {
+    width: 100%;
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+  }
+
   #contact-title {
     font-size: 18px;
     font-weight: 500;
