added scroll-margins to links in menus

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -17,6 +17,7 @@ img {
 .about-me-container {
   position: relative;
   margin-top: 144px;
+  scroll-margin-top: 120px;
 }
 
 .about-me-container img:first-child {
