--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -12,6 +12,7 @@
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
+  scroll-margin-top: 120px;
 }
 
 .tech-skill-icon-container {
