added link for scrolling to site-top on footer logo

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,13 +1,17 @@
 <div class="footer-parts">
-	<div class="footer-logo-container">
-		<div class="footer-logo-img">
-			<img src="favicon_dark_theme.png" alt="Logo">
+	<a href="#top-header">
+		<div class="footer-logo-container">
+
+			<div class="footer-logo-img">
+				<img src="favicon_dark_theme.png" alt="Logo">
+			</div>
+			<div class="footer-name-container">
+				<div class="footer-logo-first-name">Dennis</div>
+				<div class="footer-logo-last-name">Jakobi</div>
+			</div>
+
 		</div>
-		<div class="footer-name-container">
-			<div class="footer-logo-first-name">Dennis</div>
-			<div class="footer-logo-last-name">Jakobi</div>
-		</div>
-	</div>
+	</a>
 	<div class="footer-short-info">
 		<p>{{ translationService.getTranslation('footer', 'job') }}</p>
 		<p>{{ translationService.getTranslation('footer', 'location') }}</p>
