--- a/src/app/hero/header/header.component.scss
+++ b/src/app/hero/header/header.component.scss
@@ -117,6 +117,7 @@
   justify-content: space-between;
   width: 100%;
   position: relative;
+  scroll-margin-top: 120px;
 }
 
 @import "./header-media-queries.scss";
