--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -17,6 +17,7 @@
   gap: 5px;
   margin-bottom: 16px;
   transition: all 0.3s ease-in-out;
+  scroll-margin-top: 120px;
 }
 
 .footer-logo-img {
@@ -35,8 +36,9 @@
   font-weight: 640;
   font-size: 20px;
   height: 48px;
+  color: var(--primary-font-color);
   text-shadow: -1px -1px 0 var(--portfolio-bg), 1px -1px 0 var(--portfolio-bg),
-    -1px 1px 0 var(--portfolio-bg), 1px 1px 0 var(--portfolio-bg);
+    -1px 1px 0 var(--portfolio-bg), 1px 1px 0 var(--portfolio-bg) !important;
 }
 
 .footer-logo-container:hover {
