--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -35,7 +35,7 @@
 	</div>
 	<div class="footer-link-wrapper">
 		<img src="assets/icons/link_check_radio_button.png" alt="Point">
-		<a href="#" (click)="showImprint($event)">{{ translationService.getTranslation('footer', 'legalNotice') }}</a>
+		<a [routerLink]="['/imprint']">{{ translationService.getTranslation('footer', 'legalNotice') }}</a>
 	</div>
 
 </div>
