refactored all methods to fit max length and added jsdoc comments

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -12,23 +12,16 @@
 			<div class="title-button-container">
 				<a href="#featured-projects">
 					<button class="primary-btn btn-scroll-text"><span>{{ translationService.getTranslation('hero',
-							'checkWork')
-							}}</span></button>
-				</a>
-
+							'checkWork') }}</span></button></a>
 				<a href="#contact-title">
 					<button class="primary-btn btn-scroll-text"><span>{{ translationService.getTranslation('hero',
-							'contact')
-							}}</span></button>
-				</a>
-
+							'contact') }}</span></button></a>
 			</div>
 		</div>
 		<div class="hero-container-right flex-col-j-fe">
 			<div class="eight-pixel-wrapper">
 				<div class="hero-container-email-right"><a id="hero-email-link"
 						href="mailto:info@dennisjakobi.net">info&#64;dennisjakobi.net</a>
-
 					<div class="hero-container-social-medialink" id="hero-mobile-email-link">
 						<a id="mobile-email-link" href="mailto:info@dennisjakobi.net">
 							<div id="mobile-mail-icon"></div>
@@ -39,7 +32,6 @@
 				</div>
 				<div class="eight-pixel-align"></div>
 			</div>
-
 			<div class="hero-link-checkpoint-wrapper">
 				<div class="hero-container-social-media-link" id="hero-github-link"><a
 						href="https://github.com/DennisJakobi76" target="_blank"></a></div>
@@ -56,7 +48,6 @@
 				<div class="hero-container-seperator" id="hero-seperator-right"></div>
 				<div class="eight-pixel-align"></div>
 			</div>
-
 		</div>
 		<app-marquee />
 	</main>
