--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -58,7 +58,7 @@
 }
 
 #growth-mindset:hover .skill-icon-name {
-  color: rgba(61, 207, 182, 1);
+  color: var(--active-font-color);
   transition: color 0.3s ease-in-out;
 }
 
