--- a/src/app/hero/header/header.component.scss
+++ b/src/app/hero/header/header.component.scss
@@ -15,7 +15,7 @@
   width: 100%;
   height: 48px;
   gap: 24px;
-  color: rgba(255, 255, 255, 1);
+  color: var(--white-text);
 
   > #language-switch {
     background-image: url("../../../../public/assets/icons/default_language_switch.png");
