--- a/src/app/hero/header/mobile-menu/mobile-menu.component.scss
+++ b/src/app/hero/header/mobile-menu/mobile-menu.component.scss
@@ -12,7 +12,7 @@
   width: 238px;
   height: 252px;
   border-radius: 30px;
-  border: 1px solid rgba(61, 207, 182, 1);
+  border: 1px solid var(--active-font-color);
   background: linear-gradient(55.22deg, #1c1c1c 36.26%, #08463b 93.28%);
   padding-top: 40px;
   padding-bottom: 40px;
@@ -20,7 +20,12 @@
   padding-right: 77px;
   margin-top: 100px;
 
-  color: rgba(255, 255, 255, 1);
+  color: var(--white-text);
+  font-family: "Karla";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 120%;
+  letter-spacing: 0%;
 
   > #mobile-language-switch {
     background-image: url("../../../../../public/assets/icons/default_language_switch.png");
