--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -26,7 +26,7 @@ main {
   margin-top: 156px;
   gap: 12px;
   font-family: "Karla";
-  color: rgba(217, 217, 2127, 1);
+  color: var(--primary-font-color);
 
   > h2 {
     font-size: 40px;
@@ -46,7 +46,7 @@ main {
   justify-content: center;
   align-items: center;
   gap: 48px;
-  color: rgba(255, 255, 255, 1);
+  color: var(--white-text);
 }
 
 .hero-container-left {
@@ -143,7 +143,7 @@ main {
 }
 
 #hero-seperator-right {
-  background-color: rgba(217, 217, 2127, 1);
+  background-color: var(--primary-font-color);
   height: 220px;
 }
 
