--- a/src/app/legal-notice/legal-notice.component.scss
+++ b/src/app/legal-notice/legal-notice.component.scss
@@ -18,7 +18,7 @@
   width: 1248px;
   height: 656px;
   border-radius: 30px;
-  border: 1px solid rgba(61, 207, 182, 1);
+  border: 1px solid var(--active-font-color);
   background: linear-gradient(55.22deg, #1c1c1c 36.26%, #08463b 93.28%);
   padding: 62px;
 }
