--- a/src/app/portfolio/project-details-card/project-details-card.component.scss
+++ b/src/app/portfolio/project-details-card/project-details-card.component.scss
@@ -17,7 +17,7 @@
   width: 1248px;
   height: 656px;
   border-radius: 30px;
-  border: 1px solid rgba(61, 207, 182, 1);
+  border: 1px solid var(--active-font-color);
   background: linear-gradient(55.22deg, #1c1c1c 36.26%, #08463b 93.28%);
   padding: 62px;
 }
@@ -58,7 +58,7 @@
   font-size: 64px;
   line-height: 80%;
   letter-spacing: -3%;
-  color: rgba(255, 255, 255, 1);
+  color: var(--white-text);
 }
 
 .details-card-description-container {
@@ -88,7 +88,7 @@
   font-size: 18px;
   line-height: 120%;
   letter-spacing: 0%;
-  color: rgba(255, 255, 255, 1);
+  color: var(--white-text);
 }
 
 .details-card-tech-container {
@@ -117,7 +117,7 @@
     font-size: 16px;
     line-height: 120%;
     letter-spacing: 0%;
-    color: rgba(255, 255, 255, 1);
+    color: var(--white-text);
   }
 }
 
@@ -141,7 +141,7 @@
   background: none;
   padding-right: 24px;
   padding-left: 24px;
-  border: 1px solid rgba(255, 255, 255, 1);
+  border: 1px solid var(--white-text);
   transition: all 0.3s ease-in-out;
 
   > div > div > img {
@@ -167,7 +167,7 @@
     font-size: 18px;
     line-height: 120%;
     letter-spacing: 0%;
-    color: rgba(255, 255, 255, 1);
+    color: var(--white-text);
     transition: all 0.3s ease-in-out;
   }
 
@@ -189,7 +189,7 @@
   &:hover {
     cursor: pointer;
     > .details-card-next-project-text {
-      color: rgba(255, 255, 255, 1);
+      color: var(--white-text);
     }
 
     > div > img {
