--- a/src/app/references/reference-card/reference-card.component.scss
+++ b/src/app/references/reference-card/reference-card.component.scss
@@ -26,7 +26,7 @@
     width: 100%;
     height: 1px;
     border-radius: 32px;
-    border: 1px solid rgba(255, 255, 255, 1);
+    border: 1px solid var(--white-text);
   }
 
   .reference-card-author-name {
@@ -35,7 +35,7 @@
     font-size: 18px;
     line-height: 120%;
     letter-spacing: 0%;
-    color: rgba(255, 255, 255, 1);
+    color: var(--white-text);
   }
 }
 
