--- a/src/app/references/references.component.scss
+++ b/src/app/references/references.component.scss
@@ -50,7 +50,7 @@ h2 {
     position: absolute;
     top: 0;
     left: 50%;
-    width: 632px; // Card-Breite
+    width: 632px;
     height: 1px;
     transform: translateX(-50%);
     pointer-events: none;
@@ -81,7 +81,6 @@ h2 {
     height: 8px;
     border-radius: 50%;
     background-color: var(--white-text);
-
     transition: 0.3s;
   }
 
