removed tailwind to fix display failure

--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -1,4 +1,4 @@
-body {
+.hero-container {
   background-image: url("../../../public/assets/img/hero_and_skill_bg.png");
   background-size: cover;
   background-repeat: no-repeat;
