--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="hero-container">
 	<app-header />
 	<main>
 		<div class="hero-container-left flex-col-j-fe">
@@ -51,4 +51,4 @@
 		</div>
 		<app-marquee />
 	</main>
-</body>
+</div>
