--- a/src/app/references/references.component.scss
+++ b/src/app/references/references.component.scss
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  max-width: 1440px;
+  // max-width: 1440px;
+  width: 100%;
   height: 452px;
   margin-top: 80px;
   gap: 48px;
