--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,7 +51,7 @@ body {
   // max-width: 1440px;
   width: 100%;
   min-height: 100vh;
-  margin: 0 auto;
+  // margin: 0 auto;
 }
 
 .display-none {
