--- a/src/app/references/references.component.scss
+++ b/src/app/references/references.component.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  // max-width: 1440px;
   width: 100%;
   height: 452px;
   margin-top: 80px;
@@ -22,7 +21,7 @@ h2 {
 }
 
 .carousel-shadow-wrapper {
-  width: 1440px;
+  width: 100%;
   height: 274px;
   overflow: hidden;
   position: relative;
@@ -35,7 +34,7 @@ h2 {
   position: absolute;
   top: 0;
   left: 0;
-  width: 1440px;
+  width: 100%;
   height: 100%;
   background: linear-gradient(
     90deg,
