--- a/src/app/technologies/technologies-media-queries.scss
+++ b/src/app/technologies/technologies-media-queries.scss
@@ -11,6 +11,15 @@
   }
 }
 
+@media (max-width: 900px) {
+  .tech-skill-icon-container {
+    height: auto;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 40px;
+    gap: 40px;
+  }
+}
+
 @media (max-width: 770px) {
   .technologies-content-container {
     flex-direction: column;
@@ -31,10 +40,7 @@
 @media (max-width: 640px) {
   .tech-skill-icon-container {
     width: 100%;
-    height: auto;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 40px;
-    gap: 40px;
+    gap: 30px;
   }
 
   .skill-icon-img img {
