--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,8 +1,10 @@
 :host {
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   padding-left: 80px;
+  padding-right: 80px;
 }
 
 .portfolio-header {
@@ -11,7 +13,6 @@
   justify-content: center;
   align-items: flex-start;
   width: 100%;
-  height: 581px;
   > h2 {
     width: 98px;
     height: 28px;
