--- a/src/app/portfolio/projects/projects.component.scss
+++ b/src/app/portfolio/projects/projects.component.scss
@@ -22,7 +22,7 @@
 }
 
 .single-project-container {
-  width: 880px;
+  max-width: 800px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -82,6 +82,7 @@
 }
 
 .project-tech-container {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
