--- a/src/app/technologies/technologies-media-queries.scss
+++ b/src/app/technologies/technologies-media-queries.scss
@@ -3,6 +3,9 @@
     padding: 40px;
     margin-bottom: 80px;
   }
+  .tech-skill-icon-container {
+    gap: 40px;
+  }
 }
 
 @media (max-width: 1140px) {
