--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  // padding-left: 80px;
-  // padding-right: 80px;
+  padding-left: 80px;
+  padding-right: 80px;
   margin-top: 160px;
   gap: 36px;
   min-height: 541px;
