improved projects-component to fit different screen-sizes

--- a/src/app/portfolio/projects/projects-media-queries.scss
+++ b/src/app/portfolio/projects/projects-media-queries.scss
@@ -3,9 +3,9 @@
     margin-left: 32px !important;
   }
 
-  .single-project-container {
-    width: 800px;
-  }
+  // .single-project-container {
+  //   width: 800px;
+  // }
 
   .project-img-container {
     height: 150px;
@@ -20,7 +20,7 @@
 
 @media (max-width: 1110px) {
   .single-project-container {
-    width: 720px;
+    width: 680px;
   }
 }
 
