--- a/src/app/portfolio/projects/projects.component.scss
+++ b/src/app/portfolio/projects/projects.component.scss
@@ -7,13 +7,29 @@
 
 .projects-and-thumbnails-container {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
   margin-top: 32px;
   margin-bottom: 124px;
   width: 100%;
+  height: 300px;
 }
 
 .projects-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  max-width: 800px;
   width: 100%;
+  flex: 1;
+}
+
+.project-thumbnails-container {
+  display: flex;
+  flex: 1;
+  justify-content: flex-start;
 }
 
 .project-borders {
@@ -23,6 +39,7 @@
 
 .single-project-container {
   max-width: 800px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -40,6 +57,7 @@
 }
 
 .project-title-container {
+  text-wrap: nowrap;
   font-family: "Fira Code";
   font-weight: 700;
   font-size: 24px;
@@ -53,7 +71,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  width: 270px;
+  width: 100%;
   gap: 12px;
 }
 
