added content-max-width to 1920px on all components and added min height to 100vh on hero-component

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,6 +8,8 @@
   padding-right: 96px;
   margin-top: 80px;
   flex-wrap: wrap;
+  max-width: 1920px;
+  width: 100%;
 }
 
 .footer-logo-container {
