--- a/src/app/references/references.component.scss
+++ b/src/app/references/references.component.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  max-width: 1920px;
   width: 100%;
   height: 452px;
   margin-top: 80px;
