fixed bug on zoom-out to keep all elements in center

--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -5,6 +5,8 @@
   align-items: center;
   padding-left: 80px;
   padding-right: 80px;
+  max-width: 1920px;
+  margin: 48px auto;
 }
 
 .portfolio-header {
