--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -5,6 +5,7 @@
 .technologies-container {
   margin-bottom: 180px;
   max-width: 1920px;
+  margin: 48px auto;
 }
 
 .technologies-content-container {
