--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
-<app-hero />
-<app-about-me />
-<app-technologies />
-<app-portfolio />
-<app-references />
-<app-contact />
-<app-footer />
+<div id="bg">
+	<app-hero />
+	<app-about-me />
+	<app-technologies />
+	<app-portfolio />
+	<app-references />
+	<app-contact />
+	<app-footer />
+</div>
