--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,9 +1,5 @@
+<app-header></app-header>
 <div class="privay-policy-container">
-	<div class="privacy-card-close-btn-container">
-		<div class="close-btn-container">
-			<div class="close-btn" [routerLink]="['/']"></div>
-		</div>
-	</div>
 	<div class="content-wrapper">
 		<h1>{{ translationService.getTranslation('imprint', 'privacyPolicyTitle') }}</h1>
 		<div>
@@ -39,3 +35,4 @@
 		</div>
 	</div>
 </div>
+<app-footer></app-footer>
